dav: Mark files as untrashable

Otherwise nautilus will offer the wrong action in its UI.

https://bugzilla.gnome.org/show_bug.cgi?id=753934